--- a/style.css
+++ b/style.css
@@ -10,6 +10,24 @@
 .Correct{
     color: green;
 }
+
 .Incorrect{
     color: red;
+}
+
+button{
+    background-color: coral;
+    padding: 5px;
+    text-align: center;
+    border-radius: 5%;
+    border: none;
+    text-decoration: none;
+    display: inline-block;
+    margin-right: 500px;
+    margin-bottom: 10px;
+    color: white;
+}
+
+.choiceBtn{
+    padding: 20px;
 }
